--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pin_code_fields : ^7.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
